# pctx

./: .gitignore  README.md  pyproject.toml
src/pctx/: cli.py
src/pctx/commands/: ask.py  find.py  learn.py  scan.py
src/pctx/data/: file.py  vector.py
src/pctx/git/: gitignore.py
