[project]
name = "pctx"
version = "0.1.0"
description = "Project context information for AI agents."
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.9,<3.14"
dependencies = [
    "typer>=0.21.1",
    "pathspec>=1.0.3",
    "chromadb>=1.4.1",
    "mcp>=1.25.0"
]

[project.scripts]
pctx = "pctx"

[project.entry-points."pipx.run"]
pctx = "pctx"